--- a/scss/pc/main.scss
+++ b/scss/pc/main.scss
@@ -2,6 +2,8 @@
 @import "/scss/variables.scss";
 @import "/scss/reset.scss";
 @import "/scss/pc/homepage/homepage.scss";
+@import "/scss/pc/property/detail.scss";
+@import "/scss/pc/property/property.scss";
 
 #pc-wrap{
     #top {
